k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: movienight
spec:
  type: ClusterIP
  selector:
    app: movienight
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
