k8/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: movienight
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - movienight-api.joestrong.co.uk
      secretName: movienight-tls
  rules:
    - host: movienight-api.joestrong.co.uk
      http:
        paths:
          - backend:
              serviceName: movienight
              servicePort: 80
